Replicate Product: Alignment and UI refinement done. Working on data insertion issue

--- a/assets/admin/css/AdminLTE.css
+++ b/assets/admin/css/AdminLTE.css
@@ -1758,7 +1758,7 @@ Component: timeline
 .btn.btn-default:hover,
 .btn.btn-default:active,
 .btn.btn-default.hover {
-  background-color: #f4f4f4!important;
+  background-color: #fafafa!important;
 }
 .btn.btn-default.btn-flat {
   border-bottom-color: #d9dadc;
